// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component generator module writes an app component 1`] = `
"import React from \\"react\\";
import { connect } from \\"react-redux\\";
import OneView from \\"./OneView\\"

const Component = () => (
    <div id=\\"test-app\\">
        <OneView/>
    </div>
);

export default Component;"
`;

exports[`component generator module writes an app component 2`] = `
"import React from \\"react\\";
import { connect } from \\"react-redux\\";
import Grid from \\"@material-ui/core/Grid\\";
import FooTextfield from './FooTextfield';

const Component = () => (
    <div id=\\"one-view\\">
<FooTextfield />
    </div>
);

export default Component;"
`;
